<resources>
    <string name="app_name">Tales of DD</string>
    <string name="explore_dresden_title">Explore Dresden with us!</string>
    <string name="dresden_description">Discover Dresden\'s landmarks through historical narratives.</string>
    <string name="app_info">Step into Dresden\'s rich history with personalized guides who bring the city\'s landmarks to life. Take photos, collect memories, and uncover stories at each location. Your journey through Dresden\'s cultural heritage starts here.</string>
    <string name="meet_guide_button">MEET YOUR GUIDE</string>
    <string name="logo_description">Dresden Tour App Logo</string>
    <string name="landmark_image_description">Dresden Landmark</string>


    <string name="our_dresden_guides">Our Dresden Guides</string>
    <string name="search_hint">Search guides</string>
    <string name="guide">Guide</string>
    <string name="map">Map</string>
    <string name="collection">Collection</string>
    <string name="about">About</string>

    <string name="student">Student</string>

    <string name="augustus_image_description">Image of Augustus</string>
    <string name="back_button_description">Back to Guides</string>

    <string name="landmark_image">My landmarks</string>

    <string name="overview_not_available">Overview not available</string>

    <!-- About -->
    <string name="about_this_project">About This Project</string>
    <string name="project_description">This project is part of the Mobile Cartography course at the Technical University of Dresden, developed under the International Masters in Cartography program. Supervised by Prof. Eva, the project explores innovative cartographic design for mobile applications.</string>
    <string name="meet_the_team">Meet the Team</string>
    <string name="footer_text">© 2025 Mobile Cartography Team</string>

    <string name="landmark_not_found">Landmark details not found in database.</string>
    <string name="details_not_available">Details not available.</string>

    <string name="photo_description">Full screen photo</string>

    <string name="no_landmarks_message">No landmarks associated with this guide.</string>
    <string name="landmarks_fetch_error">Failed to fetch landmarks. Please try again.</string>

</resources>