<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_logo"
        android:clipToOutline="true"
        android:contentDescription="@string/logo_description"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/large_margin" />

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:fontFamily="sans-serif-medium"
        android:text="@string/explore_dresden_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintWidth_max="wrap" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:fontFamily="sans-serif"
        android:paddingHorizontal="@dimen/large_margin"
        android:text="@string/dresden_description"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/subtitle_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintWidth_max="wrap" />

    <!-- Circular Image -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/landmarkImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="@dimen/large_margin"
        android:contentDescription="@string/landmark_image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/dresden_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle" />

    <!-- Meet Guide Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/meetGuideButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:fontFamily="sans-serif-medium"
        android:text="@string/meet_guide_button"
        android:textColor="@color/black"
        app:backgroundTint="@color/gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/landmarkImage" />

</androidx.constraintlayout.widget.ConstraintLayout>